@@ -13,8 +13,9 @@ Version 1.0.4
 * Fix several collision and sound source issues in flipped rooms.
 * Fix several pushable sound and object collision bugs.
 * Fix original bug with incorrect climb up behaviour on ladders under sloped ceilings.
-* Fix TR1 centaur bubble targetting.
+* Fix TR1 centaur bubble targeting.
 * Fix caustics not turning off in display settings.
+* Fix windowed mode not using real resolution when DPI scaling is active.
 
 Lua API changes:
 * Add Flow.EnableMassPickup option in Gameflow.lua to enable/disable mass pickup.
